# KairoCore

./: .gitignore  CMakeLists.txt  Makefile  README.md
core/: CMakeLists.txt
core/include/emulator/: audio_frame.hpp  audio_sink.hpp  debug_snapshot.hpp  emulator_instance.hpp  frame_step.hpp  input_source.hpp  input_state.hpp  save_state.hpp  video_frame.hpp  video_sink.hpp
core/src/: config.cpp  debug_snapshot.cpp  emulator_core.cpp  emulator_instance.cpp  fast_forward.cpp  frame_step.cpp  save_state.cpp  volume_control.cpp
core/tests/: CMakeLists.txt  test_cart_header.cpp  test_cpu.cpp  test_debug_snapshot.cpp  test_emulator_lifecycle.cpp  test_fast_forward.cpp  test_frame_step.cpp  test_game_profile.cpp  test_input_mapping.cpp  test_memory_bus.cpp  test_save_state.cpp
emu_backend/: CMakeLists.txt
emu_backend/include/backend/: cart.hpp  cpu.hpp  flash.hpp  gba_system.hpp  gpu.hpp  hle_bios.hpp  io.hpp  memory.hpp  registers.hpp
emu_backend/src/: apu.cpp  cart.cpp  cpu.cpp  cpu_arm.cpp  cpu_thumb.cpp  dma.cpp  flash.cpp  gba_system.cpp  gpu.cpp  hle_bios.cpp  io.cpp  memory.cpp  registers.cpp  timer.cpp
platform/android/native/include/android_bridge/: android_input_bridge.hpp
platform/android/native/src/: android_debug_bridge.cpp  android_input_bridge.cpp  android_surface_bridge.cpp  jni_bridge.cpp
platform/linux_sdl/: CMakeLists.txt
platform/linux_sdl/include/linux_sdl/: keybind_ui.hpp  sdl_app.hpp  sdl_audio.hpp  sdl_input.hpp  sdl_renderer.hpp
platform/linux_sdl/src/: debug_overlay.cpp  keybind_ui.cpp  main.cpp  sdl_app.cpp  sdl_audio.cpp  sdl_input.cpp  sdl_renderer.cpp
platform/shared/: CMakeLists.txt
platform/shared/include/platform/: file_system.hpp  input_mapper.hpp  settings_store.hpp
platform/shared/src/: input_mapper.cpp  logger.cpp  settings_store.cpp
tools/: build_android.sh  format.sh  lsan.supp  run_linux.sh
